Bug Fix all codes 🫸🌀✏️📗🐧🐳